--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">  
+  <link rel="shortcut icon" href="images/Fahim-preview.png" type="image/x-icon">
 </head>
 <body>
-<section>
+<section class="top-banner">
     <div class="half-width">
       <h1>Welcome To</h1>
       <h1><span class="orange-color">Habib Hossain</span> World!</h1>
       <h3>I am a student and a gamer</h3>
       <p>My name is Habib Hossain Fahim.I lived in Bangladesh.I am 20 years old.I lived in a beautiful village.also i am a gamer.I play Pubg,Valorant,GTA V,etc.Now i am learnig how to make a website and make it beautiful..</p>
-      <a target="_blank" href="https://www.facebook.com/habibhossain.fahim.98">HIRE ME</a>
+      <a class="link-button" target="_blank" href="https://www.facebook.com/habibhossain.fahim.98">HIRE ME</a>
   </div>
   <div class="half-width">
     <img src="images/Fahim.jpg" alt="">
