--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
     <img src="images/Fahim.jpg" alt="">
   </div>
 </section>
+<section class="dream-big">
+    <div class="half-width">
+        <img src="images/Fahim.jpg" alt="">
+    </div>
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Beacome a web developer</h2>
+        <p>I already learned the basic HTML and CSS . Also I know how to Publish a website .I play cricket,football,badminton ,etc.I read in a National University Name Lakshmipur govt. collage . Now i am making this page for practice.  </p>
+        <a class="link-button" target="_blank" href="https://www.youtube.com/channel/UClfbaXJ1570BDHzxc_paUrg">Donwload Resume</a>
+    </div>
+</section>
 </body>
 </html>
