--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="shortcut icon" href="images/Fahim-preview.png" type="image/x-icon">
 </head>
 <body>
-<section class="top-banner">
+<section class="top-banner flexible-container">
     <div class="half-width">
       <h1>Welcome To</h1>
       <h1><span class="orange-color">Habib Hossain</span> World!</h1>
@@ -24,7 +24,7 @@
     <img src="images/Fahim.jpg" alt="">
   </div>
 </section>
-<section class="dream-big">
+<section class="dream-big .flexible-container">
     <div class="half-width">
         <img src="images/Fahim.jpg" alt="">
     </div>
@@ -34,6 +34,21 @@
         <p>I already learned the basic HTML and CSS . Also I know how to Publish a website .I play cricket,football,badminton ,etc.I read in a National University Name Lakshmipur govt. collage . Now i am making this page for practice.  </p>
         <a class="link-button" target="_blank" href="https://www.youtube.com/channel/UClfbaXJ1570BDHzxc_paUrg">Donwload Resume</a>
     </div>
+</section>
+<section>
+      <h1>Experiences</h1>
+  <div class="flexible-container">
+    <div>
+      <h1>Newbe developer</h1> 
+      <h3>2022-Present | Pro level developer</h3>
+      <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+ </div>
+ <div>
+    <h1>Baby web developer</h1>
+    <h3>2022-2024 | Hero Learner</h3>
+    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+ </div>
+  </div>
 </section>
 </body>
 </html>
